fixup styling; prevent grid margin from covering up breadcrumbs

--- a/packages/tree-finder/style/panel/index.less
+++ b/packages/tree-finder/style/panel/index.less
@@ -5,9 +5,14 @@
 // the BSD 3 Clause license. The full license can be found in the LICENSE file.
 //
 
-tree-finder {
-  display: flex;
-  flex-flow: column;
+// tree-finder {
+//   display: flex;
+//   flex-flow: column;
 
-  height: 600px;
-}
+//   // height: 600px;
+// }
+
+// tree-finder > div {
+//   height: 100%;
+//   width: 100%;
+// }
