--- a/packages/tree-finder/style/theme/material.css
+++ b/packages/tree-finder/style/theme/material.css
@@ -22,6 +22,7 @@
 }
 
 tree-finder .tf-panel-grid {
+  outline: none;
   padding-top: 12px;
   padding-left: 12px;
   padding-bottom: 0;
